--- a/templates/recipe_list_by_category.html
+++ b/templates/recipe_list_by_category.html
@@ -20,17 +20,18 @@
           <img src="{{ recipe.featured_image.url }}" alt="image" class="img-thumbnail card-img-top">
           {% endif %}
           <div class="image-flash">
-            <a href="{% url 'show-profile' recipe.author.profile.pk %}" 
-            class="author image-flash-author"><small>Author: </small>{{ recipe.author }}</a><br>
-            <a href="{% url 'category' recipe.category %}" 
-            class="category image-flash-category"><small>Category: </small>{{ recipe.category }}</a><br>
+            <a href="{% url 'show-profile' recipe.author.profile.pk %}" class="author image-flash-author"><small>Author:
+              </small>{{ recipe.author }}</a><br>
+            <a href="{% url 'category' recipe.category %}" class="category image-flash-category"><small>Category:
+              </small>{{ recipe.category }}</a><br>
           </div>
         </div>
       </div>
       <div class="col-lg-8 col-12">
         <div class="card-body">
-          <a href="{% url 'recipe_detail' recipe.slug %}"  class="card-title">
-            <h5>{{ recipe.recipe_title }}</h5></a>
+          <a href="{% url 'recipe_detail' recipe.slug %}" class="card-title">
+            <h5>{{ recipe.recipe_title }}</h5>
+          </a>
           <hr>
           <p class="card-text">{{ recipe.excerpt }}</p>
           <hr>
@@ -76,6 +77,11 @@
   </ul>
 </nav>
 {% endif %}
+</div>
+<hr>
+<div class="gx-2">
+  <a href="{% url 'categories' %}" class="btn col-10 offset-1  col-lg-3 offset-lg-3 btn-outline-success">Back to Categories</a>
+  <a href="{% url 'recipes' %}" class="btn col-10 offset-1 col-lg-3 offset-lg-0 btn-outline-success">Back to Recipes</a>
 </div>
 
 {% endblock %}
