added static img links to base and index.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
       <!-- Logo -->
       <a class="navbar-brand" href="{% url 'start' %}">
         <span class="brand-logo">Shemmylicious</span>
-        <img src="{% static 'images/food_trans.png' %}"
+        <img src="{% static 'images/food-trans-dark.png' %}"
           alt="Shemmylicious Food Sign" height="75">
       </a>
       <!-- Hidden Burger Menu -->
