--- a/templates/recipe_all.html
+++ b/templates/recipe_all.html
@@ -5,7 +5,7 @@
 
 <!-- Top Slogan Section -->
 <section class="top-slogan">
-  <div class="container col-lg-8 offset-lg-2 col-10 text-center top-slogan">
+  <div class="col-10 offset-1 col-lg-8 offset-lg-2 text-center top-slogan">
     <h4 class="">Cooking Time Is My Favorite Time <i class="far fa-heart"></i></h4>
     <hr>
     <h5>Shemmylicious Food</h5>
@@ -16,7 +16,7 @@
   </div>
 </section>
 <!-- List of all Recipes -->
-<div class="container col-lg-8 offset-lg-2 col-10 text-center">
+<div class="col-10 offset-1 col-lg-8 offset-lg-2 text-center">
   <div class="row justify-content-start">
     {% for recipe in object_list %}
     <div class="card" style="width: 18rem;">
