--- a/templates/recipe_blog.html
+++ b/templates/recipe_blog.html
@@ -7,7 +7,7 @@
 
 <!-- Top Slogan Section -->
 <section class="top-slogan">
-    <div class="container col-lg-8 offset-lg-2 text-center top-slogan">
+    <div class="col-10 offset-1 col-lg-8 offset-lg-2 text-center top-slogan">
         <h4 class="">Cooking Time Is My Favorite Time <i class="far fa-heart"></i></h4>
         <hr>
         <h5>Shemmylicious Food Blog</h5>
@@ -18,7 +18,7 @@
 </section>
 <!-- Recipe Head -->
 <div class="masthead">
-    <div class="container">
+    <div class="col-10 offset-1">
         <div class="row g-0">
             <div class="col-md-6 masthead-text">
                 <!-- Recipe title goes in these h1 tags -->
