--- a/templates/recipe_add_category.html
+++ b/templates/recipe_add_category.html
@@ -9,7 +9,7 @@
 
 <div class="container">
     <br>
-    <div class="container col-6">
+    <div class="col-10 offset-1 col-md-8 offset-md-2">
         {% if submitted %}
         <center>
             <br>
