--- a/templates/recipe_list.html
+++ b/templates/recipe_list.html
@@ -5,7 +5,7 @@
 
 <!-- Top Slogan Section -->
 <section class="top-slogan">
-  <div class="container col-lg-8 offset-lg-2 col-10 text-center top-slogan">
+  <div class="col-10 offset-1 col-lg-8 offset-lg-2 text-center top-slogan">
     <h4 class="">Cooking Time Is My Favorite Time <i class="far fa-heart"></i></h4>
     <hr>
     <h5>Shemmylicious Food Blog</h5>
@@ -16,7 +16,7 @@
   </div>
 </section>
 <!-- Blog -->
-<div class="container col-lg-8 offset-lg-2 col-10">
+<div class="col-10 offset-1 col-lg-8 offset-lg-2 ">
   {% for recipe in object_list %}
   <div class="card mb-3">
     <div class="row gy-1">
