updated style of base and index

--- a/templates/base.html
+++ b/templates/base.html
@@ -149,7 +149,7 @@
 
           <li class="nav-item nav-link-s">
             <div class="nav-item-s">
-              <a class="nav-link" href="{% url 'register' %}">Sign Up <i class="fa-solid fa-user-plus fa-beat-fade fa-xs"></i></a>
+              <a class="nav-link" href="{% url 'register' %}">Sign-up <i class="fa-solid fa-user-plus fa-beat-fade fa-xs"></i></a>
             </div>
           </li>
 
