--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
       <a href="{% url 'recipe-mylist' %}" class="btn btn-sm btn-outline-light headline-bttn">Your Recipes <i
           class="fa-solid fa-user fa-xs"></i></a>
       {% else %}
-      <a href="{% url 'register' %}" class="btn btn-sm btn-outline-light headline-bttn">Register <i
+      <a href="{% url 'register' %}" class="btn btn-sm btn-outline-light headline-bttn">Sign-up <i
           class="fa-solid fa-user-plus fa-beat-fade fa-xs"></i></a>
       <a href="{% url 'login-user' %}" class="btn btn-sm btn-outline-light headline-bttn">Login <i
           class="fa-solid fa-arrow-right-to-bracket fa-beat-fade fa-xs"></i></a>
