--- a/templates/recipe_all.html
+++ b/templates/recipe_all.html
@@ -28,8 +28,14 @@
         <img src="{{ recipe.featured_image.url }}" alt="image" class="img-thumbnail card-img-recipe w-100">
         {% endif %}
         <div class="image-flash">
-          <a href="{% url 'show-profile' recipe.author.profile.id %}" 
-          class="author image-flash-author"><small>Author: </small>{{ recipe.author }}</a><br>
+          <!-- Logic to check if Profile exists -->
+          {% if recipe.author.profile.id %}
+            <a href="{% url 'show-profile' recipe.author.profile.id %}" alt="No Profile" 
+            class="author image-flash-author"><small>Author: </small>{{ recipe.author }}</a><br>
+          {% else %}
+            <a href="#" 
+            class="author image-flash-author"><small>Author: </small>{{ recipe.author }}</a><br>
+          {% endif %}
         <a href="{% url 'category' recipe.category %}" 
           class="category image-flash-category"><small>Category: </small>{{ recipe.category }}</a>
         </div>
