--- a/templates/recipe_mylist.html
+++ b/templates/recipe_mylist.html
@@ -39,8 +39,32 @@
                 {% endif %} 
                 <a href="{% url 'recipe-update' recipe.pk %}" class="btn btn-sm col-6 btn-outline-success"><span>Update</span></a><br><br>
                 <a href="{% url 'add-recipe' %}" class="btn btn-sm col-5 btn-outline-warning"><span>New</span></a> 
-                <a href="{% url 'recipe-delete' recipe.pk %}" class="btn btn-sm col-6 btn-outline-danger"><span>Delete</span></a>
-                
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-sm col-6 btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                  Delete
+                </button>
+                <!-- Modal for Delete Recipe -->
+                <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title">Delete Recipe</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        <p>You are about to delete this recipe.</p>
+                        <p>Are you sure you want to continue?</p>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-sm col-2 btn-outline-success" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-sm col-2 btn-outline-danger">
+                          <a href="{% url 'recipe-delete' recipe.pk %}" class="">Delete</a>
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
