--- a/templates/base.html
+++ b/templates/base.html
@@ -64,15 +64,7 @@
             <div class="nav-item-s">
               <div class="active-nav"></div>
             </div>
-          </li>
-
-          <li class="nav-item nav-link-s">
-            <div class="nav-item-s">
-              <a class="nav-link" aria-current="page" href="#about">About</a>
-            </div>
-          </li>
-
-        
+          </li>        
           <!-- Nav Links visible when User is authenticated -->
           {% if user.is_authenticated %}
 
@@ -158,6 +150,12 @@
 
           <li class="nav-item nav-link-s">
             <div class="nav-item-s">
+              <a class="nav-link" aria-current="page" href="#about">About</a>
+            </div>
+          </li>
+          
+          <li class="nav-item nav-link-s">
+            <div class="nav-item-s">
               <a class="nav-link" href="{% url 'register' %}">Sign-up <i class="fa-solid fa-user-plus fa-beat-fade fa-xs"></i></a>
             </div>
           </li>
@@ -173,10 +171,10 @@
         </ul>
       </div>
       <!-- Search Bar -->
-      <span class="navbar-text text-muted">
+      <span class="navbar-text text-muted me-3">
         <form class="d-flex" method="POST" action="{% url 'recipe-search' %}">
           {% csrf_token %}
-          <input class="form-control me-auto" type="search" placeholder="Search Recipe" aria-label="Search Recipe" name="searched">
+          <input class="form-control me-1" type="search" placeholder="Search Recipe" aria-label="Search Recipe" name="searched">
           <button class="btn btn-outline-success btn-sm" type="submit">GO</button>
         </form>
       </span>
