--- a/members/templates/registration/registration.html
+++ b/members/templates/registration/registration.html
@@ -1,15 +1,16 @@
 {% extends "base.html" %}
-
 {% block title %}Sign up{% endblock %}
 
 {% block content %}
 <div class="container">
     <div class="row">
         <div class="col-md-6 mt-3 offset-md-2">
+            <br>
             <h3>Sign Up</h3>
-
+            <br>
+            <br>
             <p>Welcome to the Shemmylicious Food blog. <br><br> Do you already have an account? Then please <a
-                    class="link" href="{% url 'login-user' %}">sign in</a> instead.</p>
+                    class="link" href="{% url 'login-user' %}">login</a> instead.</p>
         </div>
     </div>
     <div class="row">
@@ -20,9 +21,9 @@
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-
-                <div class="d-grid col-6">
-                    <button class="btn btn-outline-success"type="submit">Sign Up</button>
+                <br>
+                <div class="d-grid col-12">
+                    <button class="btn btn-outline-success" type="submit">Sign Up</button>
                 </div>
             </form>
         </div>
