--- a/members/templates/registration/registration.html
+++ b/members/templates/registration/registration.html
@@ -4,20 +4,54 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col-md-6 mt-3 offset-md-2">
+        <div class="col-10 offset-1 col-md-8 mt-3 offset-md-2">
             <br>
             <h3>Sign Up</h3>
             <br>
-            <br>
             <p>Welcome to the Shemmylicious Food blog. <br><br> Do you already have an account? Then please <a
-                    class="link" href="{% url 'login-user' %}">login</a> instead.</p>
+                class="link" href="{% url 'login-user' %}">login</a> instead.</p>
+            <p><small class="helptext"> * Required fields</small></p>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 mt-3 offset-md-2">
+        <div class="col-10 offset-1 col-md-8 mt-3 offset-md-2">
             <form class="signup" id="signup_form" method="post" action="{% url 'register' %}">
                 {% csrf_token %}
-                {{ form.as_p }}
+
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" name="username" id="id_username" placeholder="Username" required>
+                    <label for="id_username">* Username</label>
+                    <p><small class="helptext"> 150 characters or fewer. Letters, digits and @/./+/-/_ only.</small></p>
+                </div><br>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" name="first_name" id="id_first_name" placeholder="First name">
+                    <label for="id_first_name">First name</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" name="last_name" id="id_last_name" placeholder="Last name">
+                    <label for="id_last_name">Last name</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" name="email" id="id_email" placeholder="Email address" required>
+                    <label for="id_email">* Email address</label>
+                </div><br>
+                <div class="form-floating mb-3">
+                    <input type="password" class="form-control" name="password1" id="id_password1" placeholder="Password" required>
+                    <label for="id_password1">* Password</label>
+                    <p><small class="helptext">
+                        <ul>
+                            <li>Your password can’t be too similar to your other personal information.</li>
+                            <li>Your password must contain at least 8 characters.</li>
+                            <li>Your password can’t be a commonly used password.</li>
+                            <li>Your password can’t be entirely numeric.</li>
+                        </ul></small></p>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="password" class="form-control" name="password2" id="id_password2" placeholder="Password" required>
+                    <label for="id_password2">* Password</label>
+                    <p><small class="helptext">Enter the same password as before, for verification.</small></p>
+                </div><br>
+
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
