bootsrtaped password change page

--- a/templates/recipe_add.html
+++ b/templates/recipe_add.html
@@ -44,7 +44,7 @@
             <div class="form-floating mb-3">
                 <input type="text" class="form-control textInput" name="excerpt" id="id_excerpt" 
                 placeholder="Additional info info (e.g. nutrition facts etc.) as required go here...">
-                <label for="id_excerpt">* Additional info info (e.g. nutrition facts etc.) as required go here...</label>
+                <label for="id_excerpt">Additional info info (e.g. nutrition facts etc.) as required go here...</label>
             </div>
             <div class="form-floating mb-3">
                 <input type="file" class="form-control fileInput fileUpload form-control-file" name="featured_image" 
