--- a/templates/recipe_add_category.html
+++ b/templates/recipe_add_category.html
@@ -25,20 +25,22 @@
         <br>
         <br>
         <br>
-        <h1>Add Category</h1>
+        <h3>Add Category</h3>
         <br>
         <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form-floating mb-3">
-                <input type="text" class="form-control textInput" name="category_name" id="div_id_category_name" placeholder="Type in Category Name">
-                <label for="div_id_category_name">Type in Category Name</label>
+                <input type="text" class="form-control textInput" name="category_name" id="div_id_category_name" 
+                placeholder="Type in Category Name" required>
+                <label for="div_id_category_name"> * Type in Category Name</label>
             </div>
             <div class="form-floating mb-3">
-                <input type="text" class="form-control textInput" name="featured_comment" id="featured_comment" placeholder="Username" required>
+                <input type="text" class="form-control textInput" name="featured_comment" id="featured_comment" 
+                placeholder="Username" required>
                 <label for="featured_comment"> * Type in Category Comment</label>
             </div>
             <div class="form-floating mb-3">
-                <input type="file" class="form-control fileinput fileUpload form-control-file" name="featured_image" 
+                <input type="file" class="form-control fileInput fileUpload form-control-file" name="featured_image" 
                 id="div_id_featured_image" placeholder=" * Category image">
                 <label for="div_id_featured_image"></label>
             </div>
