--- a/members/templates/profile/user_profile_edit.html
+++ b/members/templates/profile/user_profile_edit.html
@@ -7,23 +7,20 @@
 
 {% if user.is_authenticated %}
     {% if user.id == profile.user.id %}
-    <div class="container">
+    <div class="container col-10 offset-1 col-md-8 offset-md-2">
         <br>
         <br>
         <br>
         <h3>Edit {{ user }}'s Bio & Social Links</h3>
         <br>
         <form action="" method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.media }}
+            {% csrf_token %}          
 
             {{ form | crispy }}
-            <br>
-            
-            
+    
             <center>
                 <div class="d-grid gap-2 col-12">
-                    <button class="btn btn-outline-success">Update Bio & Social Links</button>
+                    <button class="btn btn-outline-success" type="submit">Update Bio & Social Links</button>
                     <a href="{% url 'show-profile' user.pk %}" class="btn btn-outline-success">Back to Your Profile</a>
                 </div>
             </center>
