--- a/members/templates/registration/edit_profile.html
+++ b/members/templates/registration/edit_profile.html
@@ -2,23 +2,23 @@
 {% block title %}Edit User Profile{% endblock %}
 {% load static %}
 {% block content %}
+{% load crispy_forms_tags %}
 
 {% if user.is_authenticated %}
 
 <div class="container">
     <div class="row">
-        <div class="col-md-11 offset-md-1">
+        <div class="col-10 offset-1 col-md-8 offset-md-2">
             <!-- The Profile image URL and Bio goes in the src attribute -->
             <div class="card mb-3">
                 <div class="row no-gutters">
-                    <div class="col-sm-2 offset-sm-2">
+                    <div class="col-10 offset-1 col-sm-4 offset-sm-0">
                         {% if "profile_img" in user.profile.profile_pic.url %}
                         <img src="{% static 'images/profile_img.png' %}"
                             width="100%" class="rounded-circle rounded-sm border-success">
                         {% else %}
                         <img src="{{ user.profile.profile_pic.url }}" 
                             width="100%" class="rounded-circle shadow">
-                        <br>
                         {% endif %}
                     </div>
                     <div class="col-sm-8">
@@ -64,25 +64,26 @@
                             {% endif %}
                         </div>
                     </div>
-                    <br>
-                    <br>
-                    <div class="d-grid gap-2 col-8 col-md-7 offset-2">
-                        <a href="{% url 'edit-profile-page' user.pk %}" class="btn btn-outline-success">Update Picture, Bio & Social Links</a>                      
-                    </div>
+                </div>
+                <br>
+                <br>
+                <br>
+                <div class="d-grid gap-2 col-12 col-md-8 offset-md-2">
+                    <a href="{% url 'edit-profile-page' user.pk %}" class="btn btn-outline-success">Update Picture, Bio & Social Links</a>                      
                 </div>
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-8 mt-3 offset-md-2">
+        <div class="col-10 offset-1 col-md-8 offset-md-2">
             <form class="form-group">
                 <br>
                 <h3 class="card-title">{{ user }}'s Profile Settings</h3>
                 <br>
                 {% csrf_token %}
-                {{ form.as_p }}
+                {{ form | crispy }}
                 <br>
-                <div class="d-grid gap-2 col-8 offset-2">
+                <div class="d-grid gap-2 col-12 col-md-8 offset-md-2">
                     <a class="btn btn-outline-success" href="../password/">Change Password</a>
                     <button class="btn btn-outline-success" type="submit">Update Profile Settings</button>
                     <a href="{% url 'show-profile' user.pk %}" class="btn btn-outline-success">Back to Your Profile</a>
