--- a/members/templates/registration/password_change.html
+++ b/members/templates/registration/password_change.html
@@ -1,22 +1,27 @@
 {% extends "base.html" %}
 {% block title %}Change Password{% endblock %}
 {% block content %}
+{% load crispy_forms_tags %}
 
 <div class="container">
     <div class="row">
-        <div class="col-md-6 mt-3 offset-md-2">
+        <div class="col-10 offset-1 col-md-8 offset-md-2">
+            <br>
+            <br>
             <h3>{{ user }}'s Password Change</h3>
-
             <p>Here's were you can change your password</p>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 mt-3 offset-md-2">
+        <div class="col-10 offset-1 col-md-8 offset-md-2">
             <form class="form-group">
                 {% csrf_token %}
-                {{ form.as_p }}
+                {{ form | crispy }}
                 
-                <button class="btn btn-outline-success right" type="submit">Update Password</button>
+                <br>
+                <br>
+                <button class="btn btn-outline-success col-12" 
+                type="submit">Update Password</button>
             </form>
         </div>
     </div>
